# tardex

./: .travis.yml  Cargo.toml  README.md
fixture/: Makefile  a.txt  fixture.tar
fixture/kida/: a.txt  b.txt
src/: lib.rs
